--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ witch-doctor = "^1.1.0"
 loglifos = "^0.2.0"
 aiohttp = "^3.9.5"
 pre-commit = "^3.7.0"
+fastapi = "^0.110.2"
+uvicorn = "^0.29.0"
 
 
 [tool.poetry.group.dev.dependencies]
