feat: added data types layer

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,7 @@ repos:
             "--disable=E1120", # Witch Doctor injection
             "--disable=W0221", # Witch Doctor injection
             "--disable=R0801", # Check similar lines
+            "--disable=R0902", # Check similar lines
             "-rn", # Only display messages
             "-sn", # Don't display the score
           ]
